<resources>
    <string name="app_name">Kodai</string>
    <string name="searchHint">Paieška</string>
    <string name="adresas">Adresas</string>
    <string name="kodas">Kodas</string>
    <string name="new_entry">Naujas įrašas</string>
    <string name="info_edit">Informacija</string>
    <string name="apply">Išsaugoti</string>
    <string name="additional_info">Papildoma informacija</string>
    <string name="press_back_once_more_msg">Paspausk dar sykį, kad programa užsidarytų.</string>
    <string name="menu_import_csv">Importuoti</string>
    <string name="menu_export_csv">Eksportuoti</string>
    <string name="clear_data">Išvalyti viską</string>
    <string name="default_filename" translatable="false">kodai.txt</string>
    <string name="menu_info">Apie</string>
    <string name="menu_exit">Išeiti</string>
    <string name="menu_settings">Nustatymai</string>
    <string name="delete_hint">Norint ištrinti įrašą - paspausti ir palaikyti</string>
    <string name="err_empty">Adresas negali būti tuščias</string>
    <string name="msg_entry_deleted">Įrašas ištrintas</string>
    <string name="msg_no_ext_storage">Išorinė saugykla gali būti nepasiekiama</string>
    <string name="preferences_close">Uždaryti paspaudus \"Atgal\"</string>
    <string name="pref_import_action_title">Pasirinkti veiksmą importuojant duomenis</string>
    <string name="about_msg">CRUD Demo, Vilius Bilinkevičius, 2019</string>

</resources>
