<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/new_entry"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_import"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/import_csv" />

    <item
        android:id="@+id/menu_export"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_export_csv" />
    <item
        android:id="@+id/menu_clear"
        android:checkable="false"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/clear_data" />
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_info" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/menu_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_exit" />
</menu>